# wot-replays-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: dictionaries.rs  lib.rs
test_data/: 20210412_2144_ussr-R158_LT_432_01_karelia.wotreplay  20210412_2222_france-F116_Bat_Chatillon_Bourrasque_05_prohorovka.wotreplay
wot-replays-cli/: Cargo.toml
wot-replays-cli/src/: main.rs
wot-replays-lib/: Cargo.toml  LICENSE
wot-replays-lib/examples/: display_battle_info.rs
wot-replays-lib/src/: dictionaries.rs  helpers.rs  lib.rs  models.rs
wot-replays-lib/test_data/: batlle_info.json  battle_results.json
